{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 827,
  "lineage": "374af384-bc31-55ff-e30e-e41653de5ec3",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044575974966:security-group/sg-01df3cbededf09c62",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-01df3cbededf09c62",
            "ingress": [],
            "name": "eks-kp-poc-cluster-20251222174014300500000005",
            "name_prefix": "eks-kp-poc-cluster-",
            "owner_id": "044575974966",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-kp-poc-cluster",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "tags_all": {
              "Name": "eks-kp-poc-cluster",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae3f89d1288389a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044575974966:security-group/sg-0ab3e760f7bfcdbf4",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0ab3e760f7bfcdbf4",
            "ingress": [],
            "name": "eks-kp-poc-node-20251222174014300500000006",
            "name_prefix": "eks-kp-poc-node-",
            "owner_id": "044575974966",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-kp-poc-node",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc",
              "kubernetes.io/cluster/eks-kp-poc": "owned"
            },
            "tags_all": {
              "Name": "eks-kp-poc-node",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc",
              "kubernetes.io/cluster/eks-kp-poc": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae3f89d1288389a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1909737178",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-01df3cbededf09c62",
            "security_group_rule_id": "sgr-0c2a75d501d451ae0",
            "self": false,
            "source_security_group_id": "sg-0ab3e760f7bfcdbf4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-782432847",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-0ab3e760f7bfcdbf4",
            "security_group_rule_id": "sgr-0199938b3df611e2d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_10251_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 10251/tcp webhook",
            "from_port": 10251,
            "id": "sgrule-1091438007",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0ab3e760f7bfcdbf4",
            "security_group_rule_id": "sgr-0c426dd6517319401",
            "self": false,
            "source_security_group_id": "sg-01df3cbededf09c62",
            "timeouts": null,
            "to_port": 10251,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1038858307",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0ab3e760f7bfcdbf4",
            "security_group_rule_id": "sgr-0f584811aed3d6db7",
            "self": false,
            "source_security_group_id": "sg-01df3cbededf09c62",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-999264738",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0ab3e760f7bfcdbf4",
            "security_group_rule_id": "sgr-02e34a24dded2953a",
            "self": false,
            "source_security_group_id": "sg-01df3cbededf09c62",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-4073584244",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0ab3e760f7bfcdbf4",
            "security_group_rule_id": "sgr-0f13dfeec4ca3e634",
            "self": false,
            "source_security_group_id": "sg-01df3cbededf09c62",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3784428117",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0ab3e760f7bfcdbf4",
            "security_group_rule_id": "sgr-00ef54290e866fc04",
            "self": false,
            "source_security_group_id": "sg-01df3cbededf09c62",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2234579358",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0ab3e760f7bfcdbf4",
            "security_group_rule_id": "sgr-0b80f7cef67b0d322",
            "self": false,
            "source_security_group_id": "sg-01df3cbededf09c62",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1967609292",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0ab3e760f7bfcdbf4",
            "security_group_rule_id": "sgr-03433cd9d271e30d7",
            "self": false,
            "source_security_group_id": "sg-01df3cbededf09c62",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1623818402",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0ab3e760f7bfcdbf4",
            "security_group_rule_id": "sgr-00242119b5968b9ea",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2380279948",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0ab3e760f7bfcdbf4",
            "security_group_rule_id": "sgr-08a1e39e7167a4882",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-700420963",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "us-east-1",
            "security_group_id": "sg-0ab3e760f7bfcdbf4",
            "security_group_rule_id": "sgr-00b30f9700aa525f9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044575974966:network-acl/acl-099c95d7ae6eb35e5",
            "default_network_acl_id": "acl-099c95d7ae6eb35e5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-099c95d7ae6eb35e5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "044575974966",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-00e2d7e987e17aed2",
              "subnet-02e05a4a6ebc4e28d",
              "subnet-06e598ba9afe10af0",
              "subnet-0a5a7da8a12c9b678",
              "subnet-0e16d0ec541b209b0"
            ],
            "tags": {
              "Name": "eks-kp-poc-default",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "tags_all": {
              "Name": "eks-kp-poc-default",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "vpc_id": "vpc-0ae3f89d1288389a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044575974966:route-table/rtb-0554d438ec3e7ecd5",
            "default_route_table_id": "rtb-0554d438ec3e7ecd5",
            "id": "rtb-0554d438ec3e7ecd5",
            "owner_id": "044575974966",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "eks-kp-poc-default",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "tags_all": {
              "Name": "eks-kp-poc-default",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ae3f89d1288389a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044575974966:security-group/sg-06b8c9ba021e13318",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06b8c9ba021e13318",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "044575974966",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-kp-poc-default",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "tags_all": {
              "Name": "eks-kp-poc-default",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "vpc_id": "vpc-0ae3f89d1288389a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077c33db8fcb61e93",
            "arn": "arn:aws:ec2:us-east-1:044575974966:elastic-ip/eipalloc-077c33db8fcb61e93",
            "domain": "vpc",
            "id": "eipalloc-077c33db8fcb61e93",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-29-236-24.compute-1.amazonaws.com",
            "public_ip": "100.29.236.24",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-kp-poc-us-east-1a",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "tags_all": {
              "Name": "eks-kp-poc-us-east-1a",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044575974966:internet-gateway/igw-0f181e258831d7a4b",
            "id": "igw-0f181e258831d7a4b",
            "owner_id": "044575974966",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-kp-poc",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "tags_all": {
              "Name": "eks-kp-poc",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "vpc_id": "vpc-0ae3f89d1288389a4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077c33db8fcb61e93",
            "association_id": "eipassoc-0acc4189942e83418",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0070d079a883fd823",
            "network_interface_id": "eni-0299180f55e28eb6c",
            "private_ip": "10.0.140.20",
            "public_ip": "100.29.236.24",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a5a7da8a12c9b678",
            "tags": {
              "Name": "eks-kp-poc-us-east-1a",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "tags_all": {
              "Name": "eks-kp-poc-us-east-1a",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "vpc_id": "vpc-0ae3f89d1288389a4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00e036a8d191c90e01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0070d079a883fd823",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-00e036a8d191c90e0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f181e258831d7a4b",
            "id": "r-rtb-0fd38f996589d97f01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0fd38f996589d97f0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044575974966:route-table/rtb-00e036a8d191c90e0",
            "id": "rtb-00e036a8d191c90e0",
            "owner_id": "044575974966",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "eks-kp-poc-private",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "tags_all": {
              "Name": "eks-kp-poc-private",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae3f89d1288389a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044575974966:route-table/rtb-0fd38f996589d97f0",
            "id": "rtb-0fd38f996589d97f0",
            "owner_id": "044575974966",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "eks-kp-poc-public",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "tags_all": {
              "Name": "eks-kp-poc-public",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae3f89d1288389a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0767e5e8bdd23a2b3",
            "region": "us-east-1",
            "route_table_id": "rtb-00e036a8d191c90e0",
            "subnet_id": "subnet-02e05a4a6ebc4e28d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af0cf1dfe9db4de1",
            "region": "us-east-1",
            "route_table_id": "rtb-00e036a8d191c90e0",
            "subnet_id": "subnet-0b4ed15776acdf70c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04958bebdb8694a3c",
            "region": "us-east-1",
            "route_table_id": "rtb-00e036a8d191c90e0",
            "subnet_id": "subnet-0e16d0ec541b209b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e0d8aa530a43ac4",
            "region": "us-east-1",
            "route_table_id": "rtb-0fd38f996589d97f0",
            "subnet_id": "subnet-0a5a7da8a12c9b678"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08261a3c1b2fe588f",
            "region": "us-east-1",
            "route_table_id": "rtb-0fd38f996589d97f0",
            "subnet_id": "subnet-00e2d7e987e17aed2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ad9c017f4989582",
            "region": "us-east-1",
            "route_table_id": "rtb-0fd38f996589d97f0",
            "subnet_id": "subnet-06e598ba9afe10af0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044575974966:subnet/subnet-02e05a4a6ebc4e28d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e05a4a6ebc4e28d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044575974966",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-kp-poc-private-us-east-1a",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc",
              "kubernetes.io/cluster/eks-kp-poc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-kp-poc-private-us-east-1a",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc",
              "kubernetes.io/cluster/eks-kp-poc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ae3f89d1288389a4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044575974966:subnet/subnet-0b4ed15776acdf70c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4ed15776acdf70c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044575974966",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-kp-poc-private-us-east-1b",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc",
              "kubernetes.io/cluster/eks-kp-poc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-kp-poc-private-us-east-1b",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc",
              "kubernetes.io/cluster/eks-kp-poc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ae3f89d1288389a4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044575974966:subnet/subnet-0e16d0ec541b209b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e16d0ec541b209b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044575974966",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-kp-poc-private-us-east-1c",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc",
              "kubernetes.io/cluster/eks-kp-poc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-kp-poc-private-us-east-1c",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc",
              "kubernetes.io/cluster/eks-kp-poc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ae3f89d1288389a4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044575974966:subnet/subnet-0a5a7da8a12c9b678",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5a7da8a12c9b678",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044575974966",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-kp-poc-public-us-east-1a",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc",
              "kubernetes.io/cluster/eks-kp-poc": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-kp-poc-public-us-east-1a",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc",
              "kubernetes.io/cluster/eks-kp-poc": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ae3f89d1288389a4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044575974966:subnet/subnet-00e2d7e987e17aed2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e2d7e987e17aed2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044575974966",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-kp-poc-public-us-east-1b",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc",
              "kubernetes.io/cluster/eks-kp-poc": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-kp-poc-public-us-east-1b",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc",
              "kubernetes.io/cluster/eks-kp-poc": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ae3f89d1288389a4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044575974966:subnet/subnet-06e598ba9afe10af0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e598ba9afe10af0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044575974966",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-kp-poc-public-us-east-1c",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc",
              "kubernetes.io/cluster/eks-kp-poc": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-kp-poc-public-us-east-1c",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc",
              "kubernetes.io/cluster/eks-kp-poc": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ae3f89d1288389a4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044575974966:vpc/vpc-0ae3f89d1288389a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-099c95d7ae6eb35e5",
            "default_route_table_id": "rtb-0554d438ec3e7ecd5",
            "default_security_group_id": "sg-06b8c9ba021e13318",
            "dhcp_options_id": "dopt-028272c3e3a1b9a69",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ae3f89d1288389a4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0554d438ec3e7ecd5",
            "owner_id": "044575974966",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-kp-poc",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            },
            "tags_all": {
              "Name": "eks-kp-poc",
              "Project": "eks-kp-poc",
              "karpenter.sh/discovery": "eks-kp-poc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}